update about bio

--- a/index.html
+++ b/index.html
@@ -37,16 +37,27 @@
         <h2 style="text-align: left; padding-left: 10px; font-size: 20px"> About</h2>
 
         <p>
-        I am an applied mathematician currently completing a postdoctoral position in the <a href="https://medicine.utah.edu/psychiatry">Department of Psychiatry</a> at the University of Utah working with <a href="https://ninadelacy.org/">Dr. Nina De Lacy</a> on foundation models for wearable sensors. 
+        I am an applied mathematician and a postdoctoral research associate in the 
+        <a href="https://medicine.utah.edu/psychiatry">Department of Psychiatry</a> at the University of Utah. 
+        I work with 
+        <a href="https://ninadelacy.org/">Dr. Nina De Lacy</a> on foundation models for wearable sensors.
         </p>
+
         <p>
-        I recently completed my Ph.D. in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, advised by <a href="https://faculty.washington.edu/kutz/">Dr. J. Nathan Kutz</a>.   I primarily worked on creating reduced-order models for characterizing plume dynamics, model discovery methods from sparse data observations, and joint work with the Scientific Machine Learning team at <a href="https://www.pnnl.gov/">Pacific Northwest National Lab (PNNL)</a>  on the discovery & feedback control for asymptotically stable dynamical systems.
+        I completed my Ph.D. in <a href="https://amath.washington.edu/">Applied Mathematics</a> at the University of Washington, 
+        where I was advised by <a href="https://faculty.washington.edu/kutz/">Dr. J. Nathan Kutz</a>. 
+        My research focused on reduced-order modeling for characterizing plume dynamics, 
+        model discovery methods from sparse observations, and collaborative work with the 
+        Scientific Machine Learning team at 
+        <a href="https://www.pnnl.gov/">Pacific Northwest National Laboratory (PNNL)</a> 
+        on discovery and feedback control for asymptotically stable dynamical systems.
         </p>
+
 
 
         <p>
           Outside of work I am an avid <a href="./climbing.html">rock climber</a>. I 
-          also enjoy solving rubiks cubes where I regularly compete in 
+          also enjoy solving rubiks cubes and regularly compete in 
           <a href="https://www.worldcubeassociation.org/persons/2024SALA23">competitions</a>
           in the pacific northwest. 
         </p>
