add last-updated tag

--- a/climbing.html
+++ b/climbing.html
@@ -250,7 +250,11 @@
     </section>
 
   </main>
+  <div class="last-updated">
+  <small>Last updated: <span id="last-updated"></span></small>
+  </div>
 
+<script src="js/last-updated.js"></script>
   <script>
     function toggleGallery(galleryId) {
       // Hide all galleries first
