--- a/research.html
+++ b/research.html
@@ -78,6 +78,10 @@
       </p>
     </section>
   </main>
+  <div class="last-updated">
+  <small>Last updated: <span id="last-updated"></span></small>
+  </div>
 
+<script src="js/last-updated.js"></script>
 </body>
 </html>
