correct js folder access on climb

--- a/climbing/index.html
+++ b/climbing/index.html
@@ -254,7 +254,7 @@
     <small>Last updated: <span id="last-updated"></span></small>
   </div>
 
-<script src="js/last-updated.js"></script>
+<script src="/js/last-updated.js"></script>
   <script>
     function toggleGallery(galleryId) {
       // Hide all galleries first
